--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-STRIPE_SECRET_KEY=
-STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=sk_test_YDLcGj48IIM0N055cj4TAnrg
+STRIPE_PUBLISHABLE_KEY=pk_test_NaBkDuERNA06NL02frYzC12y
